# background-remover

./: .gitignore  app.py  pyproject.toml  requirements.txt  run_app.sh
static/css/: style.css  theme.css
utils/: image_processor.py
